# chariot

./: .gitignore  README.md  pyproject.toml
config/odrive_configs/: motor_0.json  motor_1.json  motor_2.json  motor_3.json
python/chariot/: __init__.py  can_sandbox.py
python/chariot/control/: can_simple_interface.py  odrive_manager.py
python/chariot/joystick/: pyjoy.py  xbox_controller.py
python/chariot/scripts/: dump_can_errors.py
scripts/: dump_can_errors.py  joystick_control_can.py  live_plotter.py  motor_state_logger.py
src/chariot/: __init__.py
src/chariot/control/: can_simple_interface.py  odrive_manager.py
src/chariot/joystick/: pyjoy.py
